Changed the card section height visible that fixed the bug relating to the event onMouseEnter

--- a/src/pages/dashboard/style.scss
+++ b/src/pages/dashboard/style.scss
@@ -20,7 +20,7 @@
         .tax_category_card,
         .savings_category_card {
             min-width: 300px !important;
-            height: 300px !important;
+            height: 250px !important;
             position: relative;
             display: 'inline' !important;
 
